# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.31.4
	Thomas D. <whissi at whissi.de>:
	- Fix forgotten slash in eix-sync breaking hooks support (regression
	  from eix-0.31.3), see
	  https://bugs.gentoo.org/show_bug.cgi?id=565504

	Martin Väth <martin at mvath.de>:
	- Fix typo in eix-sync (regression from eix-0.31.3)

*eix-0.31.3
	Martin Väth <martin at mvath.de>:
	- Use context for internationalization of variable defaults,
	  statusline, and others
	- No utf8 in statusline https://bugs.gentoo.org/show_bug.cgi?id=518800
	- eix-functions.sh: StatusInfo(): argument must now be one string;
	  optionally an alternative statusline can be added
	- eix-functions.sh: RunCommand() has Statusline as a new 1st argument;
	  the special value "=" as 1st arg means the 2nd argument is used
	- eix-functions.sh: provide {eval_,}{n,}pgettext
	- internal: remove line numbers from .po

*eix-0.31.2
	Daniel M. Weeks <dan at danweeks.net>:
	- Initial implementation for FEATURES=binpkg-multi-instance

	Martin Väth <martin at mvath.de>:
	- Internationalization and German translation of default FORMATSTRING
	- Force fuzzy Russian translation of default FORMATSTRING and others.
	  Linguistic fixes are probably needed and welcome.
	- Add --multi-binary
	- manpage: document how to translate default FORMATSTRING to
	  other languages
	- Use UTF8 quotes in German and Russian translation
	- Extend support for FEATURES=binpkg-multi-instance: Be stricter in
	  filename syntax, add further attributes, use new colors
	- Update documentation for FEATURES=binpkg-multi-instance
	- internal: Rework eix::format: support positional arguments like %2$s.
	  Also remove %v but add inferior %d (not quoting strings) instead.
	  Both changes are needed for clean internationalization with gettext.
	- Fix --disable-nls cleanly so that inclusion order plays no role and
	  thus N_() can be used also in .h (although it currently isn't)
	- Build system: remove unneeded checks for endianness

*eix-0.31.1